syntax = "proto3";
package events;
option go_package = "github.com/TakaWakiyama/protoc-gen-go-pubsub/example";

import "option.proto";

message HelloWorldEvent {
    string eventID = 1;
    string name = 2;
    int64 unixTimeStamp = 3;
}

message HogeEvent {
    string eventID = 1;
    string message = 2;
    bool isHoge = 3;
    int64 unixTimeStamp = 4;
}

message Empty {}

service  ExamplePublisher {
    rpc HelloWorld(HelloWorldEvent) returns (Empty) {
        option (option.pubOption) = {
			topic: "helloworldtopic"
		};
    }
    rpc HogeCreated(HogeEvent) returns (Empty) {
        option (option.pubOption) = {
            topic: "hogeCreated"
        };
    }
    rpc HogesCreated(HogeEvent) returns (Empty) {
        option (option.pubOption) = {
            topic: "hogeCreated"
            batchPublish: true
        };
    }
}

service  ExamplePublisher2 {
    rpc HelloWorld2(HelloWorldEvent) returns (Empty) {
        option (option.pubOption) = {
			topic: "helloworldtopic"
		};
    }
    rpc HogeCreated2(HogeEvent) returns (Empty) {
        option (option.pubOption) = {
            topic: "hogeCreated"
        };
    }
    rpc HogesCreated2(HogeEvent) returns (Empty) {
        option (option.pubOption) = {
            topic: "hogeCreated"
            batchPublish: true
        };
    }
}
