syntax = "proto3";
package events;
option go_package = "github.com/TakaWakiyama/protoc-gen-go-pubsub/example";

import "option.proto";
import "pub.proto";

service  HelloWorldSubscriber {
    /* Hello world is super method */
    rpc HelloWorld(HelloWorldEvent) returns (Empty) {
        option (option.subOption) = {
			topic: "helloworldtopic"
			subscription: "helloworldsubscription"
		};
    }
    rpc OnHoge(HogeEvent) returns (Empty) {
        option (option.subOption) = {
            topic: "hogeCreated"
            subscription: "onHogeCreated"
            ackDeadlineSeconds: 30
        };
    }
}
